; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/protocols/http2_request/components/sh2lib/extr_sh2lib.c_sh2lib_do_get.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/protocols/http2_request/components/sh2lib/extr_sh2lib.c_sh2lib_do_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sh2lib_handle = type { i8* }

@.str = private unnamed_addr constant [8 x i8] c":method\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"GET\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c":scheme\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"https\00", align 1
@.str.4 = private unnamed_addr constant [11 x i8] c":authority\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c":path\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sh2lib_do_get(%struct.sh2lib_handle* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.sh2lib_handle*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [4 x i32], align 16
  store %struct.sh2lib_handle* %0, %struct.sh2lib_handle** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 0
  %9 = call i32 @SH2LIB_MAKE_NV(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds i32, i32* %8, i64 1
  %11 = call i32 @SH2LIB_MAKE_NV(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0))
  store i32 %11, i32* %10, align 4
  %12 = getelementptr inbounds i32, i32* %10, i64 1
  %13 = load %struct.sh2lib_handle*, %struct.sh2lib_handle** %4, align 8
  %14 = getelementptr inbounds %struct.sh2lib_handle, %struct.sh2lib_handle* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @SH2LIB_MAKE_NV(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0), i8* %15)
  store i32 %16, i32* %12, align 4
  %17 = getelementptr inbounds i32, i32* %12, i64 1
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @SH2LIB_MAKE_NV(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0), i8* %18)
  store i32 %19, i32* %17, align 4
  %20 = load %struct.sh2lib_handle*, %struct.sh2lib_handle** %4, align 8
  %21 = getelementptr inbounds [4 x i32], [4 x i32]* %7, i64 0, i64 0
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @sh2lib_do_get_with_nv(%struct.sh2lib_handle* %20, i32* %21, i32 4, i32 %22)
  ret i32 %23
}

declare dso_local i32 @SH2LIB_MAKE_NV(i8*, i8*) #1

declare dso_local i32 @sh2lib_do_get_with_nv(%struct.sh2lib_handle*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
